--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -1,8 +1,4 @@
-<nav>
-	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="about.html">About</a></li>
-		<li><a href="team.html">Team</a></li>
-		<li><a href="contact.html">Contact</a></li>
-	</ul>
+<nav class="nav">
+	[<a href="/">Home</a>]
+	[<a href="/about">About</a>]
 </nav>
