--- a/src/pages/about/index.hbs
+++ b/src/pages/about/index.hbs
@@ -1,14 +1,4 @@
-{{assign title='about us'}}
-
-{{! define the block with page-specific scripts }}
-{{#partial 'scripts'}}
-<script src="./about.js" defer="defer"></script>
-{{/partial}}
-
-{{! define the block with page-specific styles }}
-{{#partial 'styles'}}
-<link href="./about.scss" rel="stylesheet">
-{{/partial}}
+{{!-- {{assign title='about us'}} --}}
 
 {{! define the block content: include the `about/content.hbs` partial }}
 {{#partial 'content'}}
