--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -1,4 +1,4 @@
-{{assign title='webpack starter'}}
+{{!-- {{assign title='webpack starter'}} --}}
 
 {{! define the block content: include the `home/content.hbs` partial }}
 {{#partial 'content'}}
