--- a/src/pages/home/content.hbs
+++ b/src/pages/home/content.hbs
@@ -1,3 +1,2 @@
-<img src="@images/webpack.png" alt="Webpack logo" />
-<h1>webpack starter</h1>
-<p>✨ A lightweight foundation for your next webpack based frontend project.</p>
+<h1>Webpack + Handlebars Starter Kit</h1>
+<p>✨ A simple setup for front-end projects.</p>
