--- a/src/partials/footer.hbs
+++ b/src/partials/footer.hbs
@@ -1,3 +1,8 @@
 <footer>
-	<p>Contact us at <a href="mailto:info@ourcompany.com">info@ourcompany.com</a>.</p>
+	<p>
+		Contact us at
+		<a href="mailto:info@ourcompany.com">
+			info@ourcompany.com
+		</a>.
+	</p>
 </footer>
