--- a/src/pages/contact.hbs
+++ b/src/pages/contact.hbs
@@ -1,19 +1,19 @@
-{{assign pageTitle='Homepage' currentPageUrl='/'}}
+{{assign pageTitle='Contact Us' currentPageUrl='/contact.html'}}
 
 {{! define the block with page-specific styles }}
 {{#partial 'styles'}}
-	<link href="./home/home.scss" rel="stylesheet">
+	<link href="./contact/contact.scss" rel="stylesheet">
 {{/partial}}
 
 {{! define the block content: include the `home/content.hbs` partial }}
 {{#partial 'content'}}
-{{> home/content}}
+{{> contact/content}}
 {{/partial}}
 
 {{! define the block with page-specific scripts }}
-{{#partial 'scripts'}}
-	<script src="./home/home.js" defer></script>
-{{/partial}}
+{{!-- {{#partial 'scripts'}}
+	<script src="./contact/contact.js" defer></script>
+{{/partial}} --}}
 
 {{! extends the layout template with blocks defined above }}
 {{> layout}}
